test/library/standard/OS/POSIX/chmod/chmod_noprivilege.good
chmod_noprivilege.chpl:14: error: halt reached - error with chmod
